# pelican-redirect

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .taplo.toml  .yamlfmt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml  zizmor.yml
pelican/plugins/pelican_redirect/: __init__.py
tests/: test_redirect.py
