[project]
name = "pelican-redirect"
description = "Redirect pages using meta http-equiv tags"
keywords = ["pelican", "plugin", "redirect", "html", "http-equiv"]
readme = "README.md"
authors = [
    {name = "Bryan Weber", email = "bryan.w.weber@gmail.com"},
    {name = "Chris Rose", email = "offline@offby1.net"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7.0,<4.0"
dependencies = [
    "pelican >=4.5",
]
license = {text = "BSD-3-Clause"}
version = "2.0.0"

[project.urls]
Homepage = "https://github.com/bryanwweber/pelican-redirect"
Source = "https://github.com/bryanwweber/pelican-redirect"
Documentation = "https://docs.getpelican.com"
Funding = "https://donate.getpelican.com/"
Issues = "https://github.com/bryanwweber/pelican-redirect/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/changelog.d/*.rst",
  "/.github",
]
[tool.hatch.build.targets.wheel]
packages = [
  "pelican",
]
include-only = ["pelican/plugins/pelican_redirect"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest~=7.4",
    "pytest-cov~=2.12",
    "ruff>=0.11.7",
]
