[project]
authors = [
  { name = "Bryan Weber", email = "bryan.w.weber@gmail.com" },
  { name = "Chris Rose", email = "offline@offby1.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pelican :: Plugins",
  "Framework :: Pelican",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pelican >=4.5"]
description = "Redirect pages using meta http-equiv tags"
dynamic = ["version"]
keywords = ["html", "http-equiv", "pelican", "plugin", "redirect"]
license = { text = "BSD-3-Clause" }
name = "pelican-redirect"
readme = "README.md"
requires-python = ">=3.9.0,<4.0"

[project.urls]
Documentation = "https://docs.getpelican.com"
Funding = "https://donate.getpelican.com/"
Homepage = "https://github.com/bryanwweber/pelican-redirect"
Issues = "https://github.com/bryanwweber/pelican-redirect/issues"
Source = "https://github.com/bryanwweber/pelican-redirect"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/changelog.d/*.rst"]

[tool.hatch.build.targets.wheel]
include-only = ["pelican/plugins/pelican_redirect"]
packages = ["pelican"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pelican/plugins/pelican_redirect/_version.py"

[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[dependency-groups]
dev = ["pytest-cov~=2.12", "pytest-xdist>=3.5.0", "pytest~=7.4", "ruff>=0.11.7"]
