[metadata]
name = pelican-redirect
version = 1.0.0
description = "Redirect pages using meta http-equiv tags"
author = Bryan Weber
author_email = bryan.w.weber@gmail.com
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
keywords = pelican, plugin, redirect, html, http-equiv
url = https://github.com/bryanwweber/pelican-redirect
long_description_content_type = text/markdown
project_urls =
    source=https://github.com/bryanwweber/pelican-redirect
    documentation = https://docs.getpelican.com
    funding = https://donate.getpelican.com/
    issues = https://github.com/bryanwweber/pelican-redirect/issues
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Framework :: Pelican
    Framework :: Pelican :: Plugins
    Intended Audience :: End Uesrs/Desktop
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find_namespace:
python_requires = >=3.7.0,<4.0
install_requires =
    pelican >=4.5

[options.extras_require]
testing =
    pytest ~=6.0
    pytest-cov ~=2.8

[flake8]
max_line_length = 88
# Ignore docstring requirement for dunder methods and __init__,
# the latter only when the class is documented separately
extend_ignore = D105,D107,E203,W503
